--- a/services/style.css
+++ b/services/style.css
@@ -84,8 +84,8 @@ body{
 }
 .card:hover .imgBx{
     top: 25px;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
 }
 .card .imgBx::before{
     content: '';
@@ -123,10 +123,55 @@ body{
     width: 100px;
     z-index: 1;
     filter: invert(1);
-    opacity: 0.5s;
+    opacity: 0.3;
     transition: 0.5s;
+    transform: scale(0.7);
 }
 .card:hover .imgBx img{
     opacity: 1;
-    
+    transform: scale(1.2);
+}
+.card .content{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    overflow: hidden;
+}
+.card .content .details{
+    padding: 30px 20px;
+    text-align: center;
+    width: 100%;
+    transition: 0.5s;
+    transform: translateY(145px);
+}
+.card:hover .content .details{
+    transform: translateY(0px);
+}
+.card .content .details h2{
+    font-size: 1.5em;
+    font-weight: 500;
+    color: #45f3ff;
+    line-height: 1.2em;
+}
+.card .content .details p{
+    color: #fff;
+    opacity: 0;
+    transition: 0.5s;
+}
+.card .content .details a{
+    display: inline-block;
+    padding: 8px 15px;
+    background: #45f3ff;
+    margin-top: 10px;
+    font-weight: 500;
+    text-decoration: none;
+    opacity: 0;
+    transition: 0.5s;
+}
+.card:hover .content .details p,
+.card:hover .content .details a{
+    opacity: 1;
 }
